# mertons-portfolio-problem

./: .gitignore  LICENSE.txt  Makefile  README.md  mertons_portfolio_problem.ipynb  mypy.ini  pyproject.toml  volatility.ipynb
libs/clients/: __init__.py  alphavantage.py
