[tool.poetry]
name = "merton-portfolio-problem"
version = "0.1.0"
description = "Merton's portfolio problem"
authors = ["Matej Kerekrety <matej.kerekrety@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.2.0"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
pandas = "^1.2.2"
httpx = "^0.16.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
